Struktur im Dokument sowie hinzufügen von sachen

--- a/Zusammenfassungen - LaTex/MatheAbiMain.tex
+++ b/Zusammenfassungen - LaTex/MatheAbiMain.tex
@@ -5,6 +5,8 @@
 \author{Maximilian Penke}
 \date{January 2024}
 
+\renewcommand*\contentsname{Zusammenfassung}
+
 \begin{document}
 
     \maketitle
@@ -12,6 +14,29 @@
     \begin{abstract}
         Dies ist eine Zusammenfassung für die Inhalte des Berliner Abiturs von 2024 im Fach Mathematik. Dabei ist des in die drei Hauptthemen unterteilt, wobei es jeweils Differenzierungen gibt. Dafür werden die Inhalte der Einzelthemen erklärt, mit der allgemeinen Umsetzungsweise versehen und darauf folgend mit unterschiedlichen Beispielen.
     \end{abstract}
+
+    \tableofcontents
+
+    \section{Analysis}
+        \subsection{Gleichungen und Gleichungssysteme}
+        \subsection{Differenzialrechnung}
+        \subsection{Ableitungsregeln und Ableitungsbegriff}
+        \subsection{Integralrechnung}
+
+    \section{Analytische Geometrie}
+        \subsection{Zwei- bzw.dreidimensionales Koordinatensystem}
+        \subsection{Vektoren im Anschauungsraum}
+        \subsection{Affine Geometrie}
+        \subsection{Metrische Geometrie}
+
+    \section{Stochastik}
+        \subsection{Einführung in die Stochastik}
+        \subsection{Zufallsgrößen und deren Wahrscheinlichkeitsverteilung}
+        \subsection{Bernoulli-Ketten und Binomialverteilung als spezielle diskrete Wahrscheinlichkeitsverteilung}
+        \subsection{Normalverteilung als spezielle stetige Wahrscheinlichkeitsverteilung}
+        \subsection{Bedingte Wahrscheinlichkeiten}
+        \subsection{Methoden der beurteilenden Statistik}
+\end{document}
 
     \begin{enumerate}
 
