Entfernen von Anforderungen

--- a/Zusammenfassungen - LaTex/MatheAbiMain.tex
+++ b/Zusammenfassungen - LaTex/MatheAbiMain.tex
@@ -5,7 +5,7 @@
 \author{Maximilian Penke}
 \date{January 2024}
 
-\renewcommand*\contentsname{Zusammenfassung}
+\renewcommand*\contentsname{Gliederung}
 
 \begin{document}
 
@@ -38,34 +38,6 @@
         \subsection{Methoden der beurteilenden Statistik}
 \end{document}
 
-    \begin{enumerate}
-
-        \item Analysis
-        \begin{enumerate}
-            \item Gleichungen und Gleichungssysteme
-            \item Differenzialrechnung
-            \item Ableitungsregeln und Ableitungsbegriff
-            \item Integralrechnung
-        \end{enumerate}
-
-        \item Analytische Geometrie
-        \begin{enumerate}
-            \item Zwei- bzw.dreidimensionales Koordinatensystem
-            \item Vektoren im Anschauungsraum
-            \item Affine Geometrie
-            \item Metrische Geometrie
-        \end{enumerate}
-
-        \item Stochastik
-        \begin{enumerate}
-            \item Einführung in die Stochastik
-            \item Zufallsgrößen und deren Wahrscheinlichkeitsverteilung
-            \item Bernoulli-Ketten und Binomialverteilung als spezielle diskrete Wahrscheinlichkeitsverteilung
-            \item Normalverteilung als spezielle stetige Wahrscheinlichkeitsverteilung
-            \item Bedingte Wahrscheinlichkeiten
-            \item Methoden der beurteilenden Statistik
-        \end{enumerate}
-    \end{enumerate}
 
 \end{document}
 
