--- a/Zusammenfassungen - LaTex/MatheAbiMain.tex
+++ b/Zusammenfassungen - LaTex/MatheAbiMain.tex
@@ -19,7 +19,10 @@
 
     \section{Analysis}
         \subsection{Gleichungen und Gleichungssysteme}
+        \paragraph{Gleichung}
+        \paragraph{Gleichungssysteme}
         \subsection{Differenzialrechnung}
+        \paragraph{}
         \subsection{Ableitungsregeln und Ableitungsbegriff}
         \subsection{Integralrechnung}
 
