--- a/Zusammenfassungen - LaTex/MatheAbiMain.tex
+++ b/Zusammenfassungen - LaTex/MatheAbiMain.tex
@@ -22,7 +22,25 @@
         \paragraph{Gleichung}
         \paragraph{Gleichungssysteme}
         \subsection{Differenzialrechnung}
+        \paragraph{Was ist Differenzialrechnung?\\\\}
+        Um lokale Änderungen/Steigerungen von Funktionen zu bestimmen kann man die Differenzialrechnung verwenden ebenfalls kann man sie auf  Messwerte verwenden wenn man sie in Experimenten aufnimmt. Man kann mit ihr Steigerungsänderungen bei kleinen Änderungen der Abstände und Orten bestimmen. Sie ist wichtig in der Schulischen Analysis um auf da Thema der Ableitung hin zu führen.
+        \subparagraph{Steigerungsbestimmung von Funktionen über Intervalle}
+        Um die Steigerung von Fuktionen über Intervalle zu betrachten sind typische Steigungsdreiecke Praktisch, da man sie Visuell gut darstellen kann und ein werkzeug sind welches in der Mittelstuffe bereits verwendung gefunden hat.
+
+        \begin{equation}
+            \mbox{Steigung:} \vspace{10cm} m = {\frac {\Delta y} {\Delta x}}
+        \end{equation}
+
+
+
+        \begin{displaymath}
+            \lim_{x \to x_{0}} {{f(x_{0}) - f(x)} \over { x_{0} - x}}
+        \end{displaymath}
+
+
+
         \paragraph{}
+
         \subsection{Ableitungsregeln und Ableitungsbegriff}
         \subsection{Integralrechnung}
 
