--- a/Zusammenfassungen - LaTex/MatheAbiMain.tex
+++ b/Zusammenfassungen - LaTex/MatheAbiMain.tex
@@ -9,74 +9,78 @@
 
 \begin{document}
 
-    \maketitle
+\maketitle
 
-    \begin{abstract}
-        Dies ist eine Zusammenfassung für die Inhalte des Berliner Abiturs von 2024 im Fach Mathematik. Dabei ist des in die drei Hauptthemen unterteilt, wobei es jeweils Differenzierungen gibt. Dafür werden die Inhalte der Einzelthemen erklärt, mit der allgemeinen Umsetzungsweise versehen und darauf folgend mit unterschiedlichen Beispielen.
-    \end{abstract}
+\begin{abstract}
+    Dies ist eine Zusammenfassung für die Inhalte des Berliner Abiturs von 2024 im Fach Mathematik. Dabei ist des in die drei Hauptthemen unterteilt, wobei es jeweils Differenzierungen gibt. Dafür werden die Inhalte der Einzelthemen erklärt, mit der allgemeinen Umsetzungsweise versehen und darauf folgend mit unterschiedlichen Beispielen.
+\end{abstract}
 
-    \tableofcontents
+\tableofcontents
+\newpage
 
-    \section{Analysis}
-        \subsection{Gleichungen und Gleichungssysteme}
-        \paragraph{Gleichung}
-        \paragraph{Gleichungssysteme}
-        \subsection{Differenzialrechnung}
-        \paragraph{Was ist Differenzialrechnung?\\\\}
-        Um lokale Änderungen/Steigerungen von Funktionen zu bestimmen kann man die Differenzialrechnung verwenden ebenfalls kann man sie auf  Messwerte verwenden wenn man sie in Experimenten aufnimmt. Man kann mit ihr Steigerungsänderungen bei kleinen Änderungen der Abstände und Orten bestimmen. Sie ist wichtig in der Schulischen Analysis um auf da Thema der Ableitung hin zu führen.
-        \subparagraph{Steigerungsbestimmung von Funktionen über Intervalle}
-        Um die Steigerung von Fuktionen über Intervalle zu betrachten sind typische Steigungsdreiecke Praktisch, da man sie Visuell gut darstellen kann und ein werkzeug sind welches in der Mittelstuffe bereits verwendung gefunden hat.
+\section{Analysis}
+\subsection{Gleichungen und Gleichungssysteme}
+\paragraph{Gleichung}
+\paragraph{Gleichungssysteme}
+\subsection{Differenzialrechnung}
+\paragraph{Was ist Differenzialrechnung?}
+Um lokale Änderungen/Steigungen von Funktionen zu bestimmen kann man die Differenzialrechnung verwenden.
+Man kann mit ihr ebenfalls Steigungsänderungen bestimmen.
+\paragraph{Steigerungsbestimmung von Funktionen über Intervalle}
+Um die Steigung von Funktionen über Intervalle zu betrachten sind typische Steigungsdreiecke praktisch,
+da man sie visuell gut darstellen kann und sie ein Werkzeug sind welches in der Mittelstuffe bereits
+Verwendung gefunden hat.
 
-        \begin{equation}
-            \mbox{Steigung:} \vspace{10cm} m = {\frac {\Delta y} {\Delta x}}
-        \end{equation}
+\bf{Differenzenquotient:}
+\[
+    m = {\frac {\Delta y} {\Delta x}}
+\]
+
+Differenzialquotient:
+\[
+    m = \lim_{x \to x_{0}} {{f(x_{0}) - f(x)} \over { x_{0} - x}}
+\]
 
 
 
-        \begin{displaymath}
-            \lim_{x \to x_{0}} {{f(x_{0}) - f(x)} \over { x_{0} - x}}
-        \end{displaymath}
+\paragraph{}
 
+\subsection{Ableitungsregeln und Ableitungsbegriff}
+\subsection{Integralrechnung}
 
+\section{Analytische Geometrie}
+\subsection{Zwei- bzw.dreidimensionales Koordinatensystem}
+\subsection{Vektoren im Anschauungsraum}
+\subsection{Affine Geometrie}
+\subsection{Metrische Geometrie}
 
-        \paragraph{}
-
-        \subsection{Ableitungsregeln und Ableitungsbegriff}
-        \subsection{Integralrechnung}
-
-    \section{Analytische Geometrie}
-        \subsection{Zwei- bzw.dreidimensionales Koordinatensystem}
-        \subsection{Vektoren im Anschauungsraum}
-        \subsection{Affine Geometrie}
-        \subsection{Metrische Geometrie}
-
-    \section{Stochastik}
-        \subsection{Einführung in die Stochastik}
-        \subsection{Zufallsgrößen und deren Wahrscheinlichkeitsverteilung}
-        \subsection{Bernoulli-Ketten und Binomialverteilung als spezielle diskrete Wahrscheinlichkeitsverteilung}
-        \subsection{Normalverteilung als spezielle stetige Wahrscheinlichkeitsverteilung}
-        \subsection{Bedingte Wahrscheinlichkeiten}
-        \subsection{Methoden der beurteilenden Statistik}
+\section{Stochastik}
+\subsection{Einführung in die Stochastik}
+\subsection{Zufallsgrößen und deren Wahrscheinlichkeitsverteilung}
+\subsection{Bernoulli-Ketten und Binomialverteilung als spezielle diskrete Wahrscheinlichkeitsverteilung}
+\subsection{Normalverteilung als spezielle stetige Wahrscheinlichkeitsverteilung}
+\subsection{Bedingte Wahrscheinlichkeiten}
+\subsection{Methoden der beurteilenden Statistik}
 \end{document}
 
 
 \end{document}
 
-    \begin{enumerate}
-        \item Ableitungen
-        \item Integrierung
-        \item Grenzwerte
-        \item Definitionslücken
-        \item Rekonstruktion
-    \end{enumerate}
-    \begin{enumerate}
-        \item Polynomfunktionen
-        \item Gebrochenrationalefunktionen
-        \item Wurzelfunktionen
-        \item Exponentialfunktionen
-        \item Logarithmusfunktionen
-        \item Test
-    \end{enumerate}
+\begin{enumerate}
+    \item Ableitungen
+    \item Integrierung
+    \item Grenzwerte
+    \item Definitionslücken
+    \item Rekonstruktion
+\end{enumerate}
+\begin{enumerate}
+    \item Polynomfunktionen
+    \item Gebrochenrationalefunktionen
+    \item Wurzelfunktionen
+    \item Exponentialfunktionen
+    \item Logarithmusfunktionen
+    \item Test
+\end{enumerate}
 
 
 
