Added Gleichungen und Gleichungssysteme

--- a/Zusammenfassungen - LaTex/MatheAbiMain.tex
+++ b/Zusammenfassungen - LaTex/MatheAbiMain.tex
@@ -21,7 +21,36 @@
 \section{Analysis}
 \subsection{Gleichungen und Gleichungssysteme}
 \paragraph{Gleichung}
+Eine Gleichung beschreibt das Verhältnis von zwei Termen mit einem sog. Gleichungsoperator ($=$,$<$,$>$,$<=$,$>=$,$\neq$). Eine Gleichung kann nur aus Zahlen bestehen (1=1; $1<2$; $4\neq5$; usw.),
+aber auch aus Variablen (a=b; x=5; $z^2=25$).
 \paragraph{Gleichungssysteme}
+Eine Reihe von Gleichungen, die im selben Kontext stimmen, nennt man Gleichungssystem. Die Gleichungen eines Gleichungssystems werden meist
+mit römischen Ziffern (I; II; III) denotiert. Beispiel:
+\[ I \quad 5a+2b+c=0\]
+\[ II \quad -2a+b=5\]
+\[ III \quad c-10=0\]
+
+Mit einem solchen Gleichungssystem sind wir in der Lage, die Werte der Variablen herauszufinden.  An unserem Beispiel würde das wie folgt aussehen:
+
+\[ III \quad c-10=0 \quad | +10 \]
+\[c = 10\]
+c=10 in I einsetzen: 
+\[ I \quad 5a+2b+10=0 \quad | -2b \quad -10\]
+\[ 5a=-2b-10 \quad | \div 5\]
+\[a=-\frac{2}{5}b-10\]
+$a=-\frac{2}{5}b-10$ in II einsetzen:
+\[ II \quad -2(-\frac{2}{5}b-10)+b=5\]
+\[ \frac{4}{5}b+20=5 \quad | -20\]
+\[ \frac{4}{5}b=-15 \quad |\cdot \frac{5}{4} \]
+\[ b=-18.75\]
+b=-18.75 und c=10 in I einsetzen:
+\[ I \quad 5a+2(-18.75)+10=0 \quad | -10 \]
+\[ 5a-37.5=-10 \quad |+37.5 \]
+\[ 5a = 27.5 \quad | \div 5\]
+\[ a = 5.5\]
+
+Also ist $a=5.5$, $b=-18.75$, $c=10$
+
 \subsection{Differenzialrechnung}
 \paragraph{Was ist Differenzialrechnung?}
 Um lokale Änderungen/Steigungen von Funktionen zu bestimmen kann man die Differenzialrechnung verwenden.
@@ -61,10 +90,7 @@ Differenzialquotient:
 \subsection{Normalverteilung als spezielle stetige Wahrscheinlichkeitsverteilung}
 \subsection{Bedingte Wahrscheinlichkeiten}
 \subsection{Methoden der beurteilenden Statistik}
-\end{document}
 
-
-\end{document}
 
 \begin{enumerate}
     \item Ableitungen
@@ -84,4 +110,4 @@ Differenzialquotient:
 
 
 
-
+\end{document}
