Increased file width for better readability

--- a/Zusammenfassungen - LaTex/MatheAbiMain.tex
+++ b/Zusammenfassungen - LaTex/MatheAbiMain.tex
@@ -1,9 +1,11 @@
 \documentclass{article}
 \usepackage{graphicx} % Required for inserting images
+\usepackage{geometry}
 
 \title{Mathematik - Zusammenfassung fürs Abitur}
 \author{Maximilian Penke}
 \date{January 2024}
+\newgeometry{vmargin={15mm}, hmargin={12mm,17mm}}
 
 \renewcommand*\contentsname{Gliederung}
 
@@ -50,6 +52,10 @@ b=-18.75 und c=10 in I einsetzen:
 \[ a = 5.5\]
 
 Also ist $a=5.5$, $b=-18.75$, $c=10$
+
+Gleichungsysteme können auch zur Rekonstruktion von Funktionen verwendet werden. Dazu werden gewisse Bedingungen vorrausgesetzt,
+die in ein Gleichungssystem umgewandelt werden können. Beispiel: Eine Parabel hat die allgemeine Form: $ax^2+bx+c$
+
 
 \subsection{Differenzialrechnung}
 \paragraph{Was ist Differenzialrechnung?}
