Angst, dass Max quatsch macht

--- a/Zusammenfassungen - LaTex/MatheAbiMain.tex
+++ b/Zusammenfassungen - LaTex/MatheAbiMain.tex
@@ -23,9 +23,10 @@
 \section{Analysis}
 \subsection{Gleichungen und Gleichungssysteme}
 \paragraph{Gleichung}
-Eine Gleichung beschreibt das Verhältnis von zwei Termen mit einem sog. Gleichungsoperator ($=$,$<$,$>$,$<=$,$>=$,$\neq$). Eine Gleichung kann nur aus Zahlen bestehen (1=1; $1<2$; $4\neq5$; usw.),
+Eine Gleichung beschreibt das Verhältnis von zwei Termen mit einem sog. Gleichungsoperator ($=$,$<$,$>$,$<=$,$>=$,$\neq$).
+Eine Gleichung kann nur aus Zahlen bestehen (1=1; $1<2$; $4\neq5$; usw.),
 aber auch aus Variablen (a=b; x=5; $z^2=25$).
-\paragraph{Gleichungssysteme}
+\paragraph{Gleichungssysteme}\label{Gleichungssysteme}
 Eine Reihe von Gleichungen, die im selben Kontext stimmen, nennt man Gleichungssystem. Die Gleichungen eines Gleichungssystems werden meist
 mit römischen Ziffern (I; II; III) denotiert. Beispiel:
 \[ I \quad 5a+2b+c=0\]
@@ -53,20 +54,20 @@ b=-18.75 und c=10 in I einsetzen:
 
 Also ist $a=5.5$, $b=-18.75$, $c=10$
 
-Gleichungsysteme können auch zur Rekonstruktion von Funktionen verwendet werden. Dazu werden gewisse Bedingungen vorrausgesetzt,
-die in ein Gleichungssystem umgewandelt werden können. Beispiel: Eine Parabel hat die allgemeine Form: $ax^2+bx+c$
-
+Gleichungsysteme können auch zur Rekonstruktion von Funktionen verwendet werden (siehe \ref{Rekonstruktion}). 
 
 \subsection{Differenzialrechnung}
 \paragraph{Was ist Differenzialrechnung?}
+
 Um lokale Änderungen/Steigungen von Funktionen zu bestimmen kann man die Differenzialrechnung verwenden.
 Man kann mit ihr ebenfalls Steigungsänderungen bestimmen.
 \paragraph{Steigerungsbestimmung von Funktionen über Intervalle}
+
 Um die Steigung von Funktionen über Intervalle zu betrachten sind typische Steigungsdreiecke praktisch,
 da man sie visuell gut darstellen kann und sie ein Werkzeug sind welches in der Mittelstuffe bereits
 Verwendung gefunden hat.
 
-\bf{Differenzenquotient:}
+Differenzenquotient:
 \[
     m = {\frac {\Delta y} {\Delta x}}
 \]
@@ -83,6 +84,14 @@ Differenzialquotient:
 \subsection{Ableitungsregeln und Ableitungsbegriff}
 \subsection{Integralrechnung}
 
+\subsection{Grenzwerte}
+\subsection{Definitionslücken}
+\subsection{Rekonstruktion}\label{Rekonstruktion}
+\paragraph{}
+Zur Rekonstruktion einer Funktion werden gewisse Bedingungen vorrausgesetzt, die in ein Gleichungssystem (siehe \ref{Gleichungssysteme}) umgewandelt werden können.
+Beispiel: Ein Helikopterflug kann annährend durch eine Parabel beschrieben werden.
+Der Helikopter erreicht sein Max
+
 \section{Analytische Geometrie}
 \subsection{Zwei- bzw.dreidimensionales Koordinatensystem}
 \subsection{Vektoren im Anschauungsraum}
@@ -98,13 +107,6 @@ Differenzialquotient:
 \subsection{Methoden der beurteilenden Statistik}
 
 
-\begin{enumerate}
-    \item Ableitungen
-    \item Integrierung
-    \item Grenzwerte
-    \item Definitionslücken
-    \item Rekonstruktion
-\end{enumerate}
 \begin{enumerate}
     \item Polynomfunktionen
     \item Gebrochenrationalefunktionen
