--- a/Zusammenfassungen - LaTex/MatheAbiMain.tex
+++ b/Zusammenfassungen - LaTex/MatheAbiMain.tex
@@ -89,8 +89,8 @@ Differenzialquotient:
 \subsection{Rekonstruktion}\label{Rekonstruktion}
 \paragraph{}
 Zur Rekonstruktion einer Funktion werden gewisse Bedingungen vorrausgesetzt, die in ein Gleichungssystem (siehe \ref{Gleichungssysteme}) umgewandelt werden können.
-Beispiel: Ein Helikopterflug kann annährend durch eine Parabel beschrieben werden.
-Der Helikopter erreicht sein Max
+Beispiel: Ein Helikopterflug kann annährend durch eine Parabel beschrieben werden (Zeit auf der x-Achse in Minuten, Höhe auf der Y-Achse in Kilometer). \\
+Der Helikopter erreicht seine maximale Flughöhe nach 20 Minuten. $ \rightarrow f'(20)=0 \rightarrow 40a+20b=0$
 
 \section{Analytische Geometrie}
 \subsection{Zwei- bzw.dreidimensionales Koordinatensystem}
