--- a/Zusammenfassungen - LaTex/MatheAbiMain.tex
+++ b/Zusammenfassungen - LaTex/MatheAbiMain.tex
@@ -56,10 +56,48 @@ Also ist $a=5.5$, $b=-18.75$, $c=10$
 
 Gleichungsysteme können auch zur Rekonstruktion von Funktionen verwendet werden (siehe \ref{Rekonstruktion}). 
 
+\subsection{Funktionen}
+Eine mathematische Funktion $f$ ordnet jedem Wert $x$ in ihrem Definitionsbereich (siehe \ref{Definitionsbereich})
+einen Wert $y$ zu. Sie wird denotiert mit der Formulierung $y=f(x)= $ die Definition der Funktion (z.B. $x^2-5x+6$).
+Der Graph einer Funktion ist die visuelle Abbildung der Funktion. In der Schule kennen wir 5 Arten von Funktionen:
+\begin{enumerate}
+    \item Polynomfunktionen ($ax+bx^2+cx^3+...+nx^m$)
+    \item Wurzelfunktionen ($ \sqrt[3]{x} $ mit $ (\sqrt[3]{x})^3=x $. Statt x kann auch eine Funktion im Radikant stehen.)
+    \item Exponentialfunktionen ($a^{x}$, häufiger $n \cdot e^x$, e ist die sog. \emph{Eulersche Zahl}. Statt x kann auch eine Funktion im Exponent stehen.)
+    \item Logarithmusfunktionen ($log_2(x)$, häufiger $n \cdot ln(x)$, mit $e^{ln(x)}=x$. Statt x kann auch eine Funktion im Radikant stehen.)
+    \item Gebrochenrationale Funktionen ($\frac{1}{g(x)}$, $g(x)$ kann jede beliebige Funktion sein.)
+
+\end{enumerate}
+
+\subsection{Funktionsscharen}
+
+Funktionen müssen nicht nur einen Eingabewert haben. Eine Funktion $f$ kann auch von mehreren Werten abhängen.
+Das Volumen $V$ eines Quaders beispielsweise, hängt von der Länge, Breite und Tiefe des Quaders ab.
+Also ist das Volumen: $V(l,b,t)=l \cdot b \cdot t$. Im Abitur werden solche Funktionen allerdings nicht verwendet.
+Stattdessen gibt es \emph{Funktionsscharen}. Diese haben einen zweiten Parameter, der Scharparameter genannt wird.
+Eine Funktionsschar wird wie folgt geschrieben: $y=f_a(x)$ mit a als Scharparameter. Setzt man für a einen Wert ein,
+so erhält man eine Scharfunktion der Funktionsschar. Eine Scharfunktion mit $a=2$: $y=f_2(x)$.
+
+\subsubsection{Bestimmung des Parameter mit gegebenem x und y}
+Häufig sind x, y und die Funktion gegeben und es gilt den Scharparameter herauszufinden. Dazu setzt man jeden bekannten
+Wert ein und stellt nach a um. Beispiel: Eine Scharfunktion der Funktionsschar $f_a(x)=2^{x-a}$
+verläuft durch den Punkt (5|8). Berechne a.
+
+\[ 8=2^{5-a} \quad | log_2() \]
+\[ 3=5-a \quad | +a \quad -3 \]
+\[ a=2 \]
+
+\subsubsection{Berechnung typischer Punkte in Abhängigkeit vom Parameter}
+Eine Funktionsschar hat meistens Nullstellen, einen Y-Achsenabschnitt und Extrempunkte. Die Position dieser,
+hängt von dem Scharparameter ab. 
+
+\subsubsection{Ortskurve}
+\subsubsection{Gemeinsame Punkte}
+
 \subsection{Differenzialrechnung}
 \paragraph{Was ist Differenzialrechnung?}
 
-Um lokale Änderungen/Steigungen von Funktionen zu bestimmen kann man die Differenzialrechnung verwenden.
+Um lokale Änderungen/Steigungen von Falsunktionen zu bestimmen kann man die Differenzialrechnung verwenden.
 Man kann mit ihr ebenfalls Steigungsänderungen bestimmen.
 \paragraph{Steigerungsbestimmung von Funktionen über Intervalle}
 
@@ -85,7 +123,7 @@ Differenzialquotient:
 \subsection{Integralrechnung}\label{Integralrechnung}
 
 \subsection{Grenzwerte}
-\subsection{Definitionslücken}
+\subsection{Definitionsbereich und Definitionslücken}\label{Definitionsbereich}
 \subsection{Rekonstruktion}\label{Rekonstruktion}
 \paragraph{}
 Zur Rekonstruktion einer Funktion werden gewisse Bedingungen vorrausgesetzt, die in ein Gleichungssystem (siehe \ref{Gleichungssysteme}) umgewandelt werden können.
@@ -123,7 +161,7 @@ Das Aufstellen der Bedingungen kann auf verschiedenem Wege erfolgen. Auch Integr
 Lies dazu am Besten \ref{Integralrechnung} und \ref{Ableitungen}.
 
 \section{Analytische Geometrie}
-\subsection{Zwei- bzw.dreidimensionales Koordinatensystem}
+\subsection{Zwei- bzw. Drei-dimensionales (kartesisches) Koordinatensystem}
 \subsection{Vektoren im Anschauungsraum}
 \subsection{Affine Geometrie}
 \subsection{Metrische Geometrie}
