Teile von Grenzwerten

--- a/Zusammenfassungen - LaTex/MatheAbiMain.tex
+++ b/Zusammenfassungen - LaTex/MatheAbiMain.tex
@@ -143,7 +143,7 @@
 			\hline
 			Exponentialfunktionen & & \\
 			\hline
-			Logarithmusfunktionen & & \\
+			Logarithmusfunktionen & --- & $- \infty$ \\
 			\hline
 			Gebrochenrationalefunktionen & & \\
 			\hline
@@ -155,11 +155,21 @@
 		\paragraph{Verhalten im Unendlichen}\label{Verhalten Im unendlichen}
 			Foo\\
 		
-		\begin{tabular}{|c|c|c|}
+				\begin{tabular}{|c|c|c|}
 			\hline 
-			Funktionstyp & $\lim\limits_{x \rightarrow + \infty}$& $\lim\limits_{x \rightarrow - \infty}$\\
+			Funktionstyp & $\lim\limits_{x \rightarrow + \infty}$& $\lim\limits_{x \rightarrow - \infty}$ \\
 			\hline
-			\end{tabular}
+			Polynomfunktionen & & \\
+			\hline
+			Exponentialfunktionen & $\infty$ & $0$ \\
+			\hline
+			Logarithmusfunktionen & $\infty$ & --- \\
+			\hline
+			Gebrochenrationalefunktionen & & \\
+			\hline
+			Wurzelfunktionen & & \\ 
+			\hline
+		\end{tabular}
 		
 	\subsection{Definitionslücken}\label{Definitionslücke}
 	
