didn't do proper workflow

--- a/Zusammenfassungen - LaTex/MatheAbiMain.tex
+++ b/Zusammenfassungen - LaTex/MatheAbiMain.tex
@@ -301,7 +301,7 @@
 
 	\subsection{Grenzwerte}
 		\paragraph{Was sind Grenzwerte?} \label{Definitionsbereich}
-			Eine Funktion kann unterschiedliche Grenzwerte besitzen, wenn überhaupt. Grenzwerte sind Annäherungen einer Funktion wo diese sich in der Umgebung dessen ein bestimmtes verhalten einnehmen. Diese Grenzwerte können konktete Werte einnehmen oder auch Symbolische werte, wie $\infty$. \\
+			Eine Funktion kann unterschiedliche Grenzwerte besitzen, wenn überhaupt. Grenzwerte sind Annäherungen einer Funktion wo diese sich in der Umgebung dessen ein bestimmtes verhalten einnehmen. Diese Grenzwerte können konktete Werte einnehmen oder auch Symbolische werte, wie $\infty$. Ebenfalls könne ihr verhalten in nähe von Definitionslücken beschreiben.\\ \\
 			\underline{Beispiel:} Die Funktion $ \frac {1} {x}$ kann beispielsweise nicht für den x-Wert $0$ keinen Wert haben. Die Funktion verhält sich jedoch mit einem Annähern an $0$ mit höheren Werten jeh näher man an sie heran kommt. Ebenfalls nähert sie sich für immer größere x-Werte immer näher Null.
 			
 		\begin{multicols}{2}
@@ -338,8 +338,8 @@
 		
 		\end{multicols}
 				
-		\paragraph{Verhalten nahe x = 0}\label{Verhalten nahe Null}
-			Das Verhalten einer Funktion nahe des Koordinatenursprunges ist von Funktion zu Funktion unterschiedlich. Funktionstypen wie Polynomfunktionen sind Durchgängig definiert und haben nahe Null nur die eigenschaft das ihre Funktionsglieder mit geringeren Exponenten Deutlicher zum Vorschein kommen. Bei Gebrochenrationalen Funktionen ist es Jedoch der Fall das sie für $x = 0$ nicht definiert sind.\\
+		\paragraph{Verhalten nahe x = 0 \\}\label{Verhalten nahe Null}
+			Das Verhalten einer Funktion nahe des Koordinatenursprunges ist von Funktion zu Funktion unterschiedlich. Funktionstypen wie Polynomfunktionen sind Durchgängig definiert und haben nahe Null nur die eigenschaft das ihre Funktionsglieder mit geringeren Exponenten, graphisch Deutlicher zum Vorschein kommen. Bei Gebrochenrationalen Funktionen ist es Jedoch der Fall das sie für $x = 0$ nicht definiert sind.\\
 			
 		\begin{tabular}{|c|c|c|}
 			\hline 
@@ -355,28 +355,29 @@
 			\hline
 			Wurzelfunktionen & & \\ 
 			\hline
-		\end{tabular}
-		 Zu beachten ist das sich das verhalten jeweils abhängig vom Vorzeichen anpasst.
+		\end{tabular}\\
+	
 		
-		\paragraph{Verhalten im Unendlichen}\label{Verhalten Im unendlichen}
-			Foo\\
+		\paragraph{Verhalten im Unendlichen \\}\label{Verhalten Im unendlichen} 
+			
+			Das verhalten im Unendlichen ist eines welches wiederum von Funktionsarten varriiert. Beispielsweise kann das Verhalten sich einer Asymthote annähern oder sich in richtung Symbolischenwerten wie $ \pm \infty$. Aufgrund des unterschiedlichen verhalten sind die wichtigsten Funktions Typen im folgenden aufgelistet.
 		
-				\begin{tabular}{|c|c|c|}
-			\hline 
-			Funktionstyp & $\lim\limits_{x \rightarrow + \infty}$& $\lim\limits_{x \rightarrow - \infty}$ \\
-			\hline
-			Polynomfunktionen & & \\
-			\hline
-			Exponentialfunktionen & $\infty$ & $0$ \\
-			\hline
-			Logarithmusfunktionen & $\infty$ & --- \\
-			\hline
-			Gebrochenrationalefunktionen & & \\
-			\hline
-			Wurzelfunktionen & & \\ 
-			\hline
-		\end{tabular}
-		
+			\begin{tabular}{|c|c|c|}
+				\hline 
+				Funktionstyp & $\lim\limits_{x \rightarrow + \infty}$& $\lim\limits_{x \rightarrow - \infty}$ \\
+				\hline
+				Polynomfunktionen & $\infty$ & $\infty$ \\
+				\hline
+				Exponentialfunktionen & $\infty$ & $0$ \\
+				\hline
+				Logarithmusfunktionen & $\infty$ & --- \\
+				\hline
+				Gebrochenrationalefunktionen & Abhängig vom verhältnis der Polynome & -""- \\
+				\hline
+				Wurzelfunktionen & $\infty$ & --- \\ 
+				\hline
+			\end{tabular}
+			
 	\subsection{Definitionslücken}\label{Definitionslücke}
 	
 	\subsection{Rekonstruktion}\label{Rekonstruktion}
