--- a/Zusammenfassungen - LaTex/MatheAbiMain.tex
+++ b/Zusammenfassungen - LaTex/MatheAbiMain.tex
@@ -345,18 +345,18 @@
 			\hline 
 			Funktionstyp & $\lim\limits_{x \nearrow 0}$& $\lim\limits_{x \searrow 0}$ \\
 			\hline
-			Polynomfunktionen & & \\
+			Polynomfunktionen & definiert & definiert \\
 			\hline
-			Exponentialfunktionen & & \\
+			Exponentialfunktionen & 1 & 1 \\
 			\hline
 			Logarithmusfunktionen & --- & $- \infty$ \\
 			\hline
-			Gebrochenrationalefunktionen & & \\
+			Gebrochenrationalefunktionen & Abhängig von den Funktionsteilen  & -""-\\
 			\hline
-			Wurzelfunktionen & & \\ 
+			Wurzelfunktionen & Abhängig vom Radikant & -""- \\ 
 			\hline
 		\end{tabular}
-		 Zu beachten ist das sich das verhalten jeweils abhängig vom Vorzeichen anpasst.
+		 
 		
 		\paragraph{Verhalten im Unendlichen}\label{Verhalten Im unendlichen}
 			Foo\\
